Actions
Bug #11802
closedxencons: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../../common/xen/io/xencons.c:165:37: error: cast between incompatible function types from 'uint_t (*)(char *)' {aka 'unsigned int (*)(char *)'} to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] (void) add_avintr(NULL, IPL_CONS, (avfunc)xenconsintr_priv, ^ ../../common/xen/io/xencons.c:175:37: error: cast between incompatible function types from 'uint_t (*)(char *)' {aka 'unsigned int (*)(char *)'} to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] (void) rem_avintr(NULL, IPL_CONS, (avfunc)xenconsintr_priv, ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2ceb34da5f472ca531def3b536d203d345515f2a
commit 2ceb34da5f472ca531def3b536d203d345515f2a Author: Toomas Soome <tsoome@me.com> Date: 2019-10-12T06:49:09.000Z 11802 xencons: cast between incompatible function types Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions